# ACE-Workshops

./: README.md
HackerU/: imgFaceDetect.py  openCV_image_demo.py  opencv-py-demo.py  webcamDraw.py
ace2015/: CMakeLists.txt  Makefile  README.md  package.xml
ace2015/launch/: PyGameDemo.launch
ace2015/src/: PublisherDemo.py  PyGameDemo.py  Robot.py  RobotController.py  Util.py
