<?xml version="1.0"?>
<package>
  <name>ace2015</name>
  <version>0.0.0</version>
  <description>The ace2015 package</description>
  <maintainer email="pemami@ufl.edu">pemami</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>